--- a/.github/workflows/sims_pipeline.yml
+++ b/.github/workflows/sims_pipeline.yml
@@ -16,9 +16,7 @@ on:
         description: "predict or eval"
         required: true
         type: choice
-        options:
-          - predict
-          - eval
+        options: [predict, eval]
         default: predict
       SIMS:
         description: "試行回数/レース"
@@ -75,6 +73,7 @@ jobs:
     steps:
       - name: PID normalize (all/空→01..24)
         id: pidnorm
+        shell: bash
         run: |
           set -euo pipefail
           PID_IN="${{ inputs.PID }}"
@@ -94,13 +93,14 @@ jobs:
             done
             PID_EXP="${OUT%,}"
           fi
-          echo "PID_EXP=$PID_EXP" | tee -a "$GITHUB_OUTPUT"
+          echo "PID_EXP=$PID_EXP" >> "$GITHUB_OUTPUT"
 
       - name: Parse FILTERS & KEYMAN
         id: parse
         env:
           FILTERS: ${{ inputs.FILTERS }}
           KEYMAN:  ${{ inputs.KEYMAN }}
+        shell: bash
         run: |
           set -euo pipefail
           parse_kvlist () {
@@ -117,25 +117,28 @@ jobs:
             done
           }
           # defaults
-          echo "F_REQUIRE_ODDS=false" >> "$GITHUB_OUTPUT"
-          echo "F_MIN_EV=0"          >> "$GITHUB_OUTPUT"
-          echo "F_ODDS_BANDS="       >> "$GITHUB_OUTPUT"
-          echo "F_ODDS_MIN=0"        >> "$GITHUB_OUTPUT"
-          echo "F_ODDS_MAX=0"        >> "$GITHUB_OUTPUT"
-          echo "F_EXCLUDE_FIRST1=false" >> "$GITHUB_OUTPUT"
-          echo "F_ONLY_FIRST1=false"    >> "$GITHUB_OUTPUT"
-          echo "F_BUY_IN_TOP3=false"    >> "$GITHUB_OUTPUT"
-          echo "F_BUY_THR=0.7"          >> "$GITHUB_OUTPUT"
-          echo "K_ENABLE=true"   >> "$GITHUB_OUTPUT"
-          echo "K_THR=0.7"       >> "$GITHUB_OUTPUT"
-          echo "K_BOOST=0.15"    >> "$GITHUB_OUTPUT"
-          echo "K_AGGR=0.0"      >> "$GITHUB_OUTPUT"
+          {
+            echo "F_REQUIRE_ODDS=false"
+            echo "F_MIN_EV=0"
+            echo "F_ODDS_BANDS="
+            echo "F_ODDS_MIN=0"
+            echo "F_ODDS_MAX=0"
+            echo "F_EXCLUDE_FIRST1=false"
+            echo "F_ONLY_FIRST1=false"
+            echo "F_BUY_IN_TOP3=false"
+            echo "F_BUY_THR=0.7"
+            echo "K_ENABLE=true"
+            echo "K_THR=0.7"
+            echo "K_BOOST=0.15"
+            echo "K_AGGR=0.0"
+          } >> "$GITHUB_OUTPUT"
           [ -n "${FILTERS:-}" ] && parse_kvlist "$FILTERS" "F_"
           [ -n "${KEYMAN:-}" ]  && parse_kvlist "$KEYMAN"  "K_"
 
   pass1:
     needs: [normalize-parse]
     uses: ./.github/workflows/wf_pass1_keyman.yml
+    secrets: inherit
     with:
       DATE:  ${{ inputs.DATE }}
       PID:   ${{ needs.normalize-parse.outputs.PID_EXP }}
@@ -146,6 +149,7 @@ jobs:
   pass2:
     needs: [normalize-parse, pass1]
     uses: ./.github/workflows/wf_pass2_tenkai.yml
+    secrets: inherit
     with:
       DATE: ${{ inputs.DATE }}
       PID:  ${{ needs.normalize-parse.outputs.PID_EXP }}
@@ -153,6 +157,7 @@ jobs:
   pass3:
     needs: [normalize-parse, pass2]
     uses: ./.github/workflows/wf_pass3_sims_integrated.yml
+    secrets: inherit
     with:
       DATE:  ${{ inputs.DATE }}
       PID:   ${{ needs.normalize-parse.outputs.PID_EXP }}
