--- a/.github/workflows/sims_pipeline.yml
+++ b/.github/workflows/sims_pipeline.yml
@@ -38,14 +38,11 @@ on:
         required: true
         default: "scripts/sims"
         type: string
-
-      # 👇 追加されたUI入力項目：キーマンとフィルター
       KEYMAN:
         description: "例: enable=true,thr=0.7,boost=0.15,aggr=0.0,buy_in_top3=false,buy_thr=0.7"
         required: false
         default: "enable=true,thr=0.7,boost=0.15,aggr=0.0,buy_in_top3=false,buy_thr=0.7"
         type: string
-
       FILTERS:
         description: "例: require_odds=true,min_ev=1.2,odds_bands=01-09,10-19"
         required: false
@@ -78,7 +75,6 @@ jobs:
       - name: PID normalize
         id: pidnorm
         run: |
-          set -euo pipefail
           PID_IN="${{ inputs.PID }}"
           PID_TRIM="$(echo "${PID_IN:-}" | tr '[:space:]' ' ' | xargs)"
           if [ -z "$PID_TRIM" ] || [ "${PID_TRIM,,}" = "all" ]; then
@@ -101,7 +97,6 @@ jobs:
           FILTERS: ${{ inputs.FILTERS }}
           KEYMAN:  ${{ inputs.KEYMAN }}
         run: |
-          set -euo pipefail
           parse_kvlist () {
             local s="$1"; local prefix="$2"
             IFS=',' read -r -a pairs <<< "$s"
@@ -116,7 +111,7 @@ jobs:
             done
           }
 
-          # defaults
+          # 初期化（フィルター）
           echo "F_REQUIRE_ODDS=false" >> "$GITHUB_OUTPUT"
           echo "F_MIN_EV=0" >> "$GITHUB_OUTPUT"
           echo "F_ODDS_BANDS=" >> "$GITHUB_OUTPUT"
@@ -126,6 +121,8 @@ jobs:
           echo "F_ONLY_FIRST1=false" >> "$GITHUB_OUTPUT"
           echo "F_BUY_IN_TOP3=false" >> "$GITHUB_OUTPUT"
           echo "F_BUY_THR=0.7" >> "$GITHUB_OUTPUT"
+
+          # 初期化（キーマン）
           echo "K_ENABLE=true" >> "$GITHUB_OUTPUT"
           echo "K_THR=0.7" >> "$GITHUB_OUTPUT"
           echo "K_BOOST=0.15" >> "$GITHUB_OUTPUT"
