--- a/.github/workflows/wf_pass3_sims_integrated.yml
+++ b/.github/workflows/wf_pass3_sims_integrated.yml
@@ -4,48 +4,69 @@ on:
   workflow_call:
     inputs:
       DATE:
-        description: "YYYYMMDD"
         required: true
         type: string
       PID:
-        description: "正規化済み PID（例: 01,02,...,24）"
         required: true
         type: string
       MODE:
-        description: "predict or eval"
         required: true
         type: string
-        default: "predict"
       SIMS:
-        description: "試行回数/レース"
         required: true
         type: string
-        default: "600"
       TOPN:
-        description: "三連単 TOPN"
         required: true
         type: string
-        default: "18"
       UNIT:
-        description: "1点あたり(円)"
         required: true
         type: string
-        default: "100"
-      FILTERS:
-        description: "例: require_odds=true,min_ev=1.2,odds_bands=01-09,10-19"
-        required: false
-        type: string
-        default: ""
-      KEYMAN:
-        description: "例: enable=true,thr=0.7,boost=0.15,aggr=0.0,buy_in_top3=false,buy_thr=0.7"
-        required: false
-        type: string
-        default: "enable=true,thr=0.7,boost=0.15,aggr=0.0,buy_in_top3=false,buy_thr=0.7"
       OUTDIR:
-        description: "出力ディレクトリ"
         required: true
         type: string
-        default: "scripts/sims"
+
+      # Filters
+      F_REQUIRE_ODDS:
+        required: false
+        type: string
+      F_MIN_EV:
+        required: false
+        type: string
+      F_ODDS_BANDS:
+        required: false
+        type: string
+      F_ODDS_MIN:
+        required: false
+        type: string
+      F_ODDS_MAX:
+        required: false
+        type: string
+      F_EXCLUDE_FIRST1:
+        required: false
+        type: string
+      F_ONLY_FIRST1:
+        required: false
+        type: string
+      F_BUY_IN_TOP3:
+        required: false
+        type: string
+      F_BUY_THR:
+        required: false
+        type: string
+
+      # Keyman
+      K_ENABLE:
+        required: false
+        type: string
+      K_THR:
+        required: false
+        type: string
+      K_BOOST:
+        required: false
+        type: string
+      K_AGGR:
+        required: false
+        type: string
 
 permissions:
   contents: write
@@ -64,71 +85,31 @@ jobs:
 
       - name: Install deps
         run: |
-          set -e
           python -m pip install --upgrade pip
           pip install numpy pandas joblib scikit-learn
 
-      - name: Parse FILTERS & KEYMAN
-        id: parse
-        env:
-          FILTERS: ${{ inputs.FILTERS }}
-          KEYMAN: ${{ inputs.KEYMAN }}
-        run: |
-          set -euo pipefail
-          parse_kvlist () {
-            local s="$1"; local prefix="$2"
-            IFS=',' read -r -a pairs <<< "$s"
-            for kv in "${pairs[@]}"; do
-              kv="$(echo "$kv" | xargs)"
-              [ -z "$kv" ] && continue
-              if [[ "$kv" == *"="* ]]; then
-                k="$(echo "${kv%%=*}" | tr '[:lower:]' '[:upper:]' | tr -c 'A-Z0-9_' '_' | xargs)"
-                v="$(echo "${kv#*=}" | xargs)"
-                echo "$prefix$k=$v" >> "$GITHUB_OUTPUT"
-              fi
-            done
-          }
-          {
-            echo "F_REQUIRE_ODDS=false"
-            echo "F_MIN_EV=0"
-            echo "F_ODDS_BANDS="
-            echo "F_ODDS_MIN=0"
-            echo "F_ODDS_MAX=0"
-            echo "F_EXCLUDE_FIRST1=false"
-            echo "F_ONLY_FIRST1=false"
-            echo "F_BUY_IN_TOP3=false"
-            echo "F_BUY_THR=0.7"
-          } >> "$GITHUB_OUTPUT"
-          {
-            echo "K_ENABLE=true"
-            echo "K_THR=0.7"
-            echo "K_BOOST=0.15"
-            echo "K_AGGR=0.0"
-          } >> "$GITHUB_OUTPUT"
-          [ -n "${FILTERS:-}" ] && parse_kvlist "$FILTERS" "F_"
-          [ -n "${KEYMAN:-}" ] && parse_kvlist "$KEYMAN" "K_"
-
-      - name: Run Pass2 (SimS integrated with ML)
+      - name: Run Pass3 (SimS integrated with ML)
         env:
           DATE: ${{ inputs.DATE }}
           PID: ${{ inputs.PID }}
           MODE: ${{ inputs.MODE }}
           SIMS: ${{ inputs.SIMS }}
           TOPN: ${{ inputs.TOPN }}
+          UNIT: ${{ inputs.UNIT }}
           OUTDIR: ${{ inputs.OUTDIR }}
-          F_REQUIRE_ODDS: ${{ steps.parse.outputs.F_REQUIRE_ODDS }}
-          F_MIN_EV: ${{ steps.parse.outputs.F_MIN_EV }}
-          F_ODDS_BANDS: ${{ steps.parse.outputs.F_ODDS_BANDS }}
-          F_ODDS_MIN: ${{ steps.parse.outputs.F_ODDS_MIN }}
-          F_ODDS_MAX: ${{ steps.parse.outputs.F_ODDS_MAX }}
-          F_EXCLUDE_FIRST1: ${{ steps.parse.outputs.F_EXCLUDE_FIRST1 }}
-          F_ONLY_FIRST1: ${{ steps.parse.outputs.F_ONLY_FIRST1 }}
-          F_BUY_IN_TOP3: ${{ steps.parse.outputs.F_BUY_IN_TOP3 }}
-          F_BUY_THR: ${{ steps.parse.outputs.F_BUY_THR }}
-          K_ENABLE: ${{ steps.parse.outputs.K_ENABLE }}
-          K_THR: ${{ steps.parse.outputs.K_THR }}
-          K_BOOST: ${{ steps.parse.outputs.K_BOOST }}
-          K_AGGR: ${{ steps.parse.outputs.K_AGGR }}
+          F_REQUIRE_ODDS: ${{ inputs.F_REQUIRE_ODDS }}
+          F_MIN_EV: ${{ inputs.F_MIN_EV }}
+          F_ODDS_BANDS: ${{ inputs.F_ODDS_BANDS }}
+          F_ODDS_MIN: ${{ inputs.F_ODDS_MIN }}
+          F_ODDS_MAX: ${{ inputs.F_ODDS_MAX }}
+          F_EXCLUDE_FIRST1: ${{ inputs.F_EXCLUDE_FIRST1 }}
+          F_ONLY_FIRST1: ${{ inputs.F_ONLY_FIRST1 }}
+          F_BUY_IN_TOP3: ${{ inputs.F_BUY_IN_TOP3 }}
+          F_BUY_THR: ${{ inputs.F_BUY_THR }}
+          K_ENABLE: ${{ inputs.K_ENABLE }}
+          K_THR: ${{ inputs.K_THR }}
+          K_BOOST: ${{ inputs.K_BOOST }}
+          K_AGGR: ${{ inputs.K_AGGR }}
         run: |
           set -euo pipefail
           echo "[pass3] MODE=$MODE DATE=$DATE PID=$PID"
@@ -154,22 +135,13 @@ jobs:
           fi
 
       - name: Aggregate & write overall.json
-        env:
-          DATE: ${{ inputs.DATE }}
-          MODE: ${{ inputs.MODE }}
-          UNIT: ${{ inputs.UNIT }}
-          SIMS: ${{ inputs.SIMS }}
-          TOPN: ${{ inputs.TOPN }}
-          PID: ${{ inputs.PID }}
-          OUTDIR: ${{ inputs.OUTDIR }}
         run: |
           set -euo pipefail
-          python scripts/sims/aggregate_overall.py "$OUTDIR" "$DATE" "$MODE" "$UNIT" "$SIMS" "$TOPN" "$PID"
+          python scripts/sims/aggregate_overall.py "${{ inputs.OUTDIR }}" "${{ inputs.DATE }}" "${{ inputs.MODE }}" "${{ inputs.UNIT }}" "${{ inputs.SIMS }}" "${{ inputs.TOPN }}" "${{ inputs.PID }}"
 
       - name: Commit results
         if: always()
         run: |
-          set -e
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
           git add ${{ inputs.OUTDIR }}/pass2 || true
